--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <section>
             <div id="btn">
-                <button id="mybtn1">#051937</button>
-                <button id="mybtn2">#008793</button>
+                <button id="mybtn1">#fff</button>
+                <button id="mybtn2">#fff</button>
             </div>
             <h2>below to copy.</h2>
             <div class="copycode">
-                background-image: linear-gradient(to right, #051937,
-                #008793);
+                background-image: linear-gradient(to right, #fff,
+                #fff);
             </div>
         </section>
     </body>
